Did some work around the views. Some of the tests are failing. Have to work on tests.

--- a/app/views/stocks/_form.html.erb
+++ b/app/views/stocks/_form.html.erb
@@ -12,7 +12,7 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :stock_id %><br />
+    <%= "Stock ID" %><br />
     <%= f.text_field :stock_id %>
   </div>
   <div class="field">
