--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,25 +1,29 @@
-<h1>Listing stocks</h1>
+<h1>Stock List</h1>
 
-<table>
+<table class="table table-striped">
+  <thead>
   <tr>
-    <th>Stock</th>
+    <th>Stock ID</th>
     <th>Name</th>
     <th></th>
     <th></th>
     <th></th>
   </tr>
-
-<% @stocks.each do |stock| %>
-  <tr>
-    <td><%= stock.stock_id %></td>
-    <td><%= stock.name %></td>
-    <td><%= link_to 'Show', stock %></td>
-    <td><%= link_to 'Edit', edit_stock_path(stock) %></td>
-    <td><%= link_to 'Destroy', stock, confirm: 'Are you sure?', method: :delete %></td>
-  </tr>
-<% end %>
+  </thead>
+  <tbody>
+  <% @stocks.each do |stock| %>
+      <tr>
+        <td><%= stock.stock_id %></td>
+        <td><%= stock.name %></td>
+        <td><%= link_to 'Show', stock %></td>
+        <td><%= link_to 'Edit', edit_stock_path(stock) %></td>
+        <td><%= link_to 'Destroy', stock, confirm: 'Are you sure?', method: :delete %></td>
+      </tr>
+  <% end %>
+  </tbody>
 </table>
 
 <br />
 
 <%= link_to 'New Stock', new_stock_path %>
+<p><%= will_paginate @stocks %></p>
