--- a/app/views/trading_days/_trading_day.html.erb
+++ b/app/views/trading_days/_trading_day.html.erb
@@ -5,5 +5,5 @@
   <th><%= trading_day.high %></th>
   <th><%= trading_day.low %></th>
   <th><%= trading_day.volume %></th>
-  <th><%= link_to 'Show', trading_day  %></th>
+  <th><%= link_to 'Show', trading_day, class: "btn btn-mini btn-inverse"  %></th>
 </tr>
