Added Predictions to the Project. Have to work on logic for Prediction.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,16 +7,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="container">
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <div class="brand">Personal Stock Forecaster</div>
+<div class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container">
+      <div class="brand top_header">
+        Personal Stock Forecaster
       </div>
     </div>
   </div>
+</div>
 
-
+<div class="container">
   <%= yield %>
 </div>
 </body>
