--- a/app/views/trading_days/show.html.erb
+++ b/app/views/trading_days/show.html.erb
@@ -23,8 +23,12 @@
   </tr>
 </table>
 
+
+<% if !@trading_day.prediction.nil? %>
 <h3>Prediction for <%= @trading_day.stock.name %></h3>
 
 <%= render @trading_day.prediction %>
-
+<% else %>
+    *There are no predictions to display.<br/><br/>
+<% end %>
 <%= link_to 'Back', @trading_day.stock %>
