--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Stock List</h1>
+<p id="notice"><%= notice %></p>
 
 <table class="table table-striped">
   <thead>
@@ -20,6 +21,8 @@
 </table>
 
 <br />
+
+<%= link_to 'Update Quotes', stocks_update_quotes_path, class: "btn btn-success" %>
 
 <p><%= will_paginate @stocks %></p>
 
