Handling the SymbolNotFoundException (Not the best practice, have to find a better solution). And displaying the error onto the view.

--- a/app/views/stocks/index.html.erb
+++ b/app/views/stocks/index.html.erb
@@ -1,5 +1,15 @@
 <h1>Stock List</h1>
-<p id="notice"><%= notice %></p>
+<% unless notice.nil? %>
+    <div id="notice" class="alert alert-info">
+      <%= notice %>
+    </div>
+<% end %>
+
+<% unless alert.nil? %>
+    <div id="alert" class="alert alert-error">
+      <%= alert %>
+    </div>
+<% end %>
 
 <table class="table table-striped">
   <thead>
