--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,2 +1,14 @@
-<h1>Pages#about_us</h1>
-<p>Find me in app/views/pages/about_us.html.erb</p>
+<p>
+  This is our first Ruby on Rails application. This application aims to provide an easy interface for novices to Stock Market to quickly get started with Trading. We provide users with ability to quickly and easily create and maintain portfolios with their favourite stocks in them. We also provide a simple prediction for the stocks which are done periodically on all the stocks for users.
+</p>
+
+<p>
+  We the makers of this application would like to thank all the contributors of the following gems:
+<ul>
+  <li>Bootstrap will Paginate</li>
+  <li>Devise</li>
+  <li>Twitter Bootstrap</li>
+  <li>Will Paginate</li>
+  <li>YahooFinance Typhoeus</li>
+</ul>
+</p>
