--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -1,2 +1,20 @@
-<h1>Pages#contact_us</h1>
-<p>Find me in app/views/pages/contact_us.html.erb</p>
+  <table class="table-bordered table-striped">
+    <tr>
+      <td>
+        <%= image_tag("gaurav.jpg")%>
+      </td>
+      <td>
+        R. Gaurav Agarwal<br/>
+        +91 9176343852
+      </td>
+    </tr>
+    <tr>
+      <td>
+        R. Kunal Wadhwa<br/>
+        +91 9884001277
+      </td>
+      <td>
+        <%= image_tag("kunal.jpg") %>
+      </td>
+    </tr>
+  </table>
