--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,2 +1,6 @@
-<h1>Pages#welcome</h1>
-<p>Find me in app/views/pages/welcome.html.erb</p>
+<h1>Welcome to Personal Stock Forecaster</h1>
+<%= image_tag("business-team-silhouette.jpg")%>
+
+<div class="pull-right">
+  <h4>Sign in to continue.</h4>
+</div>
