--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,7 +18,7 @@
     <div><%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation %></div>
 
-    <div><%= f.submit "Sign up" %></div>
+    <div><%= f.submit "Sign up", class: "btn" %></div>
 <% end %>
 
 <%= render "links" %>
