Added Admin User to application. Awesome looks have been sacrificed. :(

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome to Personal Stock Forecaster</h1>
-<%= image_tag("business-team-silhouette.jpg")%>
-
+<%= image_tag("business-team-silhouette.jpg", height: "768", width: "1024")%>
+<br/>
 <div class="pull-right">
   <h4>Sign in to continue.</h4>
 </div>
