Updated contact pic in Contact Us.

--- a/app/views/pages/contact_us.html.erb
+++ b/app/views/pages/contact_us.html.erb
@@ -5,13 +5,15 @@
       </td>
       <td>
         R. Gaurav Agarwal<br/>
-        +91 9176343852
+        +91 9176343852<br/>
+        gauravagarwalr@aol.com
       </td>
     </tr>
     <tr>
       <td>
         R. Kunal Wadhwa<br/>
-        +91 9884001277
+        +91 9884001277<br/>
+        rkunalwadhwa@gmail.com
       </td>
       <td>
         <%= image_tag("kunal.jpg") %>
