Added Kunal's image and Have edited the About Us page.

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,14 +1,20 @@
 <p>
-  This is our first Ruby on Rails application. This application aims to provide an easy interface for novices to Stock Market to quickly get started with Trading. We provide users with ability to quickly and easily create and maintain portfolios with their favourite stocks in them. We also provide a simple prediction for the stocks which are done periodically on all the stocks for users.
+  The team behind 'Personal Stock Forecaster' aim to provide an easy interface for novices to stock market to quickly get started with Trading. We provide users with ability to quickly and easily create and maintain portfolios with their favourite stocks in them. We also provide a simple prediction for the stocks which are done periodically on all the stocks for users.
 </p>
 
 <p>
-  We the makers of this application would like to thank all the contributors of the following gems:
+  We as the makers of this application would like to thank all the contributors of the following gems:
 <ul>
-  <li>Bootstrap will Paginate</li>
+  <li>ActiveAdmin</li>
+  <li>Bootstrap Will Paginate</li>
   <li>Devise</li>
   <li>Twitter Bootstrap</li>
+  <li>Whenever</li>
   <li>Will Paginate</li>
   <li>YahooFinance Typhoeus</li>
 </ul>
+</p>
+
+<p>
+  And at last we would like to thank you, the user of this system, cause without whom this application would be meaningless.
 </p>
