Fixed typo in About Us.

--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -1,5 +1,5 @@
 <p>
-  The team behind 'Personal Stock Forecaster' aim to provide an easy interface for novices to stock market to quickly get started with Trading. We provide users with ability to quickly and easily create and maintain portfolios with their favourite stocks in them. We also provide a simple prediction for the stocks which are done periodically on all the stocks for users.
+  The team behind 'Personal Stock Forecaster' aims to provide an easy interface for novices to stock market to quickly get started with Trading. We provide users with ability to quickly and easily create and maintain portfolios with their favourite stocks in them. We also provide a simple prediction for the stocks which are done periodically on all the stocks for users.
 </p>
 
 <p>
