Form layouts were a little messed up. Added Ability for user to edit their details.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,18 +14,19 @@
       <div class="nav-collapse">
         <% if user_signed_in?  %>
             <ul class="nav">
-              <li class="active">
+              <li>
                 <%=link_to "Portfolio", shares_path%>
               </li>
-              <li class="active">
+              <li>
                 <%=link_to "Stock Index", stocks_path%>
               </li>
-              <li class="active">
+              <li>
                 <%=link_to "Predictions", predictions_path%>
               </li>
             </ul>
             <p class="pull-right">
-              <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: "navbar-text" %>
+              <%= link_to current_user.email, edit_user_registration_path, class: "navbar-text" %>
+              <%= link_to "Not "+current_user.first_name+"?", destroy_user_session_path, method: :delete, class: "navbar-text" %>
         <% else%>
             <p class="pull-right">
               <%= link_to 'Sign In', new_user_session_path, class: "navbar-text" %>
