Changed the Views '<br/>'

--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -3,8 +3,8 @@
 <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email %></div>
+  <div><%= f.label :email %>
+  <%= f.email_field :email %></div><br />
 
   <div><%= f.submit "Resend unlock instructions" %></div>
 <% end %>
